basic texture loading, resource loader class in place

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,29 +20,6 @@ add_library(
     "thirdparty/glad/include/KHR/khrplatform.h"
     "thirdparty/glad/src/gl.c"
 
-    "thirdparty/imgui/include/imconfig.h"
-    "thirdparty/imgui/include/imgui.h"
-    "thirdparty/imgui/include/imgui_internal.h"
-    "thirdparty/imgui/include/imstb_rectpack.h"
-    "thirdparty/imgui/include/imstb_textedit.h"
-    "thirdparty/imgui/include/imstb_truetype.h"
-    "thirdparty/imgui/include/backends/imgui_impl_glfw.h"
-    "thirdparty/imgui/include/backends/imgui_impl_opengl3.h"
-    "thirdparty/imgui/include/backends/imgui_impl_opengl3_loader.h"
-    "thirdparty/imgui/sources/imgui.cpp"
-    "thirdparty/imgui/sources/imgui_demo.cpp"
-    "thirdparty/imgui/sources/imgui_draw.cpp"
-    "thirdparty/imgui/sources/imgui_tables.cpp"
-    "thirdparty/imgui/sources/imgui_widgets.cpp"
-    "thirdparty/imgui/sources/backends/imgui_impl_glfw.cpp"
-    "thirdparty/imgui/sources/backends/imgui_impl_opengl3.cpp"
-
-    "thirdparty/implot/include/implot.h"
-    "thirdparty/implot/include/implot_internal.h"
-    "thirdparty/implot/sources/implot.cpp"
-    "thirdparty/implot/sources/implot_demo.cpp"
-    "thirdparty/implot/sources/implot_items.cpp"
-
     "thirdparty/pcg-cpp/include/pcg_extras.hpp"
     "thirdparty/pcg-cpp/include/pcg_random.hpp"
 
@@ -56,6 +33,7 @@ add_library(
     "include/gl/framebuffer.hpp"
     "include/gl/shader.hpp"
     "include/gl/static_buffer.hpp"
+    "include/gl/texture_unit.hpp"
     "include/gl/vec_buffer.hpp"
     "include/gl/vertex_array.hpp"
     "include/gl/batching/batch.hpp"
@@ -63,17 +41,20 @@ add_library(
     "include/gl/batching/oval_batch.hpp"
     "include/gl/batching/pixel_batch.hpp"
     "include/gl/batching/rect_batch.hpp"
+    "include/gl/batching/texture_batch.hpp"
     "include/gl/batching/tri_batch.hpp"
     "sources/gl/buffer_base.cpp"
     "sources/gl/context.cpp"
     "sources/gl/framebuffer.cpp"
     "sources/gl/shader.cpp"
+    "sources/gl/texture_unit.cpp"
     "sources/gl/vertex_array.cpp"
     "sources/gl/batching/batch.cpp"
     "sources/gl/batching/line_batch.cpp"
     "sources/gl/batching/oval_batch.cpp"
     "sources/gl/batching/pixel_batch.cpp"
     "sources/gl/batching/rect_batch.cpp"
+    "sources/gl/batching/texture_batch.cpp"
     "sources/gl/batching/tri_batch.cpp"
 
     "include/hades/internal/bitmask_enum.hpp"
@@ -92,14 +73,18 @@ add_library(
     "sources/hades/util/timermgr.cpp"
 
     "include/hades/color.hpp"
-    "include/hades/windowmgr.hpp"
     "include/hades/eventmgr.hpp"
     "include/hades/hades.hpp"
+    "include/hades/resource_loader.hpp"
+    "include/hades/texture.hpp"
     "include/hades/window.hpp"
+    "include/hades/windowmgr.hpp"
     "sources/hades/color.cpp"
-    "sources/hades/windowmgr.cpp"
     "sources/hades/eventmgr.cpp"
+    "sources/hades/resource_loader.cpp"
+    "sources/hades/texture.cpp"
     "sources/hades/window.cpp"
+    "sources/hades/windowmgr.cpp"
 )
 
 add_subdirectory("thirdparty/fmt")
@@ -129,9 +114,6 @@ target_include_directories(
     ${PROJECT_NAME}
     PUBLIC
 
-    "thirdparty/imgui/include"
-    "thirdparty/imgui/include/backends"
-    "thirdparty/implot/include"
     "thirdparty/glad/include"
     "thirdparty/pcg-cpp/include"
     "thirdparty/stb/include"
