refactored to not use windowmgr--now application + runner
* more logical structure
* separation of concerns makes more sense
* more friend classes now though? might find a way around
* single threaded again for now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,8 +57,12 @@ add_library(
     "sources/gl/batching/texture_batch.cpp"
     "sources/gl/batching/tri_batch.cpp"
 
+    "include/hades/internal/batch_set.hpp"
     "include/hades/internal/bitmask_enum.hpp"
+    "include/hades/internal/resource_loader.hpp"
     "include/hades/internal/ts_queue.hpp"
+    "sources/hades/internal/batch_set.cpp"
+    "sources/hades/internal/resource_loader.cpp"
 
     "include/hades/util/averagers.hpp"
     "include/hades/util/framecounter.hpp"
@@ -72,22 +76,20 @@ add_library(
     "sources/hades/util/ticker.cpp"
     "sources/hades/util/timermgr.cpp"
 
-    "include/hades/batch_set.hpp"
+    "include/hades/application.hpp"
     "include/hades/color.hpp"
     "include/hades/eventmgr.hpp"
     "include/hades/hades.hpp"
-    "include/hades/resource_loader.hpp"
+    "include/hades/runner.hpp"
     "include/hades/texture.hpp"
     "include/hades/window.hpp"
-    "include/hades/windowmgr.hpp"
     "include/hades/font/cp437.hpp"
-    "sources/hades/batch_set.cpp"
+    "sources/hades/application.cpp"
     "sources/hades/color.cpp"
     "sources/hades/eventmgr.cpp"
-    "sources/hades/resource_loader.cpp"
+    "sources/hades/runner.cpp"
     "sources/hades/texture.cpp"
     "sources/hades/window.cpp"
-    "sources/hades/windowmgr.cpp"
     "sources/hades/font/cp437.cpp"
 )
 
