--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -1,5 +1,5 @@
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 
-add_executable(scratch scratch.cpp)
-target_link_libraries(scratch PRIVATE hades)
+add_executable(testing testing.cpp)
+target_link_libraries(testing PRIVATE hades)
