renaming to be more accurate, SPINNING BEANS
* on a previous attempt, I benchmarked drawing ~1600 rotating, partially transparent ovals
* in SDL2, I was getting ~1-2 FPS, and they weren't even rotating
* idk if it was in Windows or Ubuntu, but running that same program in Ubuntu I'm getting ~200 FPS!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,7 @@ add_library(
     "thirdparty/stb/include/stb_image_write.h"
 
     "include/gl/buffer_base.hpp"
-    "include/hades/context.hpp"
+    "include/hades/gfxmgr.hpp"
     "include/gl/context_enums.hpp"
     "include/gl/framebuffer.hpp"
     "include/gl/shader.hpp"
@@ -44,7 +44,7 @@ add_library(
     "include/gl/batching/texture_batch.hpp"
     "include/gl/batching/tri_batch.hpp"
     "sources/gl/buffer_base.cpp"
-    "sources/hades/context.cpp"
+    "sources/hades/gfxmgr.cpp"
     "sources/gl/framebuffer.cpp"
     "sources/gl/shader.cpp"
     "sources/gl/texture_unit.cpp"
@@ -78,7 +78,7 @@ add_library(
 
     "include/hades/application.hpp"
     "include/hades/color.hpp"
-    "include/hades/eventmgr.hpp"
+    "include/hades/inputmgr.hpp"
     "include/hades/hades.hpp"
     "include/hades/runner.hpp"
     "include/hades/texture.hpp"
@@ -86,7 +86,7 @@ add_library(
     "include/hades/font/cp437.hpp"
     "sources/hades/application.cpp"
     "sources/hades/color.cpp"
-    "sources/hades/eventmgr.cpp"
+    "sources/hades/inputmgr.cpp"
     "sources/hades/runner.cpp"
     "sources/hades/texture.cpp"
     "sources/hades/window.cpp"
