basic spritesheets, change to 2 space indent

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,6 +81,7 @@ add_library(
     "include/hades/inputmgr.hpp"
     "include/hades/hades.hpp"
     "include/hades/runner.hpp"
+    "include/hades/spritesheet.hpp"
     "include/hades/texture.hpp"
     "include/hades/window.hpp"
     "include/hades/font/cp437.hpp"
@@ -88,6 +89,7 @@ add_library(
     "sources/hades/color.cpp"
     "sources/hades/inputmgr.cpp"
     "sources/hades/runner.cpp"
+    "sources/hades/spritesheet.cpp"
     "sources/hades/texture.cpp"
     "sources/hades/window.cpp"
     "sources/hades/font/cp437.cpp"
