--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -1,6 +1,9 @@
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 
+add_executable(gameoflife gameoflife.cpp)
+target_link_libraries(gameoflife PRIVATE hades)
+
 add_executable(spinning_ovals spinning_ovals.cpp)
 target_link_libraries(spinning_ovals PRIVATE hades)
 
