new fantasy-themed font! will use for something probably
* added p(revious)x and p(revious)y to inputmgr
* added mouse moved to inputmgr
* added bresenham and bezier functions from old project
* removed extra debug overlay shape info (will add back later somehow but configurable)
* bresenham now used in gameoflife example, no more setting individual points (better behavior on fast mouse motion)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,6 +73,7 @@ add_library(
     "include/hades/util/timermgr.hpp"
     "sources/hades/util/averagers.cpp"
     "sources/hades/util/framecounter.cpp"
+    "sources/hades/util/shapes.cpp"
     "sources/hades/util/random.cpp"
     "sources/hades/util/ticker.cpp"
     "sources/hades/util/timermgr.cpp"
