--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "thirdparty/openal-soft"]
 	path = thirdparty/openal-soft
 	url = https://github.com/kcat/openal-soft
+[submodule "resources/fonts"]
+	path = resources/fonts
+	url = https://github.com/beauregardes/fonts.git
