Integrated audio proto (unfinished), migrated tweenmgr from previous project
Little song demo in testing--not going to be some special part of the library, just a fun example usage of new custom timer + string functions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,23 +96,29 @@ add_library(
     "sources/hades/internal/batch_set.cpp"
     "sources/hades/internal/resource_loader.cpp"
 
+    "include/hades/util/audiomgr.hpp"
     "include/hades/util/averagers.hpp"
     "include/hades/util/framecounter.hpp"
     "include/hades/util/memusage.hpp"
     "include/hades/util/random.hpp"
     "include/hades/util/shapes.hpp"
+    "include/hades/util/strfuncs.hpp"
     "include/hades/util/thread_pool.hpp"
     "include/hades/util/ticker.hpp"
     "include/hades/util/time.hpp"
     "include/hades/util/timermgr.hpp"
+    "include/hades/util/tweenmgr.hpp"
+    "sources/hades/util/audiomgr.cpp"
     "sources/hades/util/averagers.cpp"
     "sources/hades/util/framecounter.cpp"
     "sources/hades/util/memusage.cpp"
     "sources/hades/util/random.cpp"
     "sources/hades/util/shapes.cpp"
+    "sources/hades/util/strfuncs.cpp"
     "sources/hades/util/thread_pool.cpp"
     "sources/hades/util/ticker.cpp"
     "sources/hades/util/timermgr.cpp"
+    "sources/hades/util/tweenmgr.cpp"
 
     "include/hades/application.hpp"
     "include/hades/color.hpp"
