--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -10,5 +10,8 @@ target_link_libraries(spinning_ovals PRIVATE hades)
 add_executable(font_corrupt font_corrupt.cpp)
 target_link_libraries(font_corrupt PRIVATE hades)
 
+add_executable(music_player music_player.cpp)
+target_link_libraries(music_player PRIVATE hades)
+
 add_executable(testing testing.cpp)
 target_link_libraries(testing PRIVATE hades)
