--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,8 +13,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: configure
-      run: ./configure
+    - name: build_dir
+      run: mkdir .build
+           cd .build
+    - name: cmake
+      run: cmake .. -DCMAKE_BUILD_TYPE=Debug
     - name: make
       run: make
     - name: make check
