--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,9 +13,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      with:
+        submodules: recursive
     - name: build_dir
-      run: mkdir -p .build
-           cd .build
+      run: |
+        mkdir -p .build
+        cd .build
     - name: cmake
       run: cmake .. -DCMAKE_BUILD_TYPE=Debug
     - name: make
