--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,6 +15,8 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: recursive
+    - name: enter_dir
+      run: cd hades
     - name: build_dir
       run: |
         mkdir -p .build
