--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,17 +15,9 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: recursive
-    - name: enter_dir
-      run: cd hades
-    - name: build_dir
-      run: |
-        mkdir -p .build
-        cd .build
-    - name: cmake
-      run: cmake .. -DCMAKE_BUILD_TYPE=Debug
-    - name: make
-      run: make
-    - name: make check
-      run: make check
-    - name: make distcheck
-      run: make distcheck
+    - name: mkdir
+      run: mkdir build
+    - name: cmake build
+      run: cmake -Bbuild -H.
+    - name: cmake make
+      run: cmake --build build/ --target all
