--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,6 +15,8 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: recursive
+    - name: xorg-dev
+      run: sudo apt update && sudo apt install xorg-dev
     - name: mkdir
       run: mkdir build
     - name: cmake build
