--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,6 +15,11 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: recursive
+    - name: Set up GCC
+      uses: egor-tensin/setup-gcc@v1
+      with:
+        version: 11
+        platform: x64
     - name: xorg-dev
       run: sudo apt update && sudo apt install xorg-dev
     - name: mkdir
@@ -22,4 +27,4 @@ jobs:
     - name: cmake build
       run: cmake -Bbuild -H.
     - name: cmake make
-      run: cmake --build build/ --target all
+      run: cmake --build build/ --target all --parallel 4
