opensimplex implementation done--needs comments about what each variant does/what it's for

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -28,6 +28,7 @@ set(srcs ${srcs}
     src/baphomet/mgr/timermgr.cpp
     src/baphomet/mgr/tweenmgr.cpp
 
+    src/baphomet/noise/opensimplex.cpp
     src/baphomet/noise/perlin.cpp
 
     src/baphomet/util/time/ticker.cpp
