central messaging class used for engine event handling
* still pretty early, things will probably change
* need to find a better system than arbitrary strings for endpoint names--way too error-prone + it's ugly
  * maybe just a predefined list of systems like the categories already are?

--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -1,4 +1,6 @@
 set(headers ${headers}
+    include/baphomet/app/internal/messenger.hpp
+    include/baphomet/app/internal/msgcat.hpp
     include/baphomet/app/internal/resource_loader.hpp
     include/baphomet/app/application.hpp
     include/baphomet/app/runner.hpp
