--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -5,3 +5,5 @@ target_link_libraries(gameoflife PRIVATE baphomet)
 add_executable(testing testing.cpp)
 target_compile_features(testing PUBLIC cxx_std_20)
 target_link_libraries(testing PRIVATE baphomet)
+
+add_subdirectory(prototyping)
