--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,31 +5,20 @@ project(Baphomet VERSION 1.0
         LANGUAGES CXX)
 
 add_library(goatlib STATIC
-            src/goat/engine.cpp
-            include/goat/engine.hpp
-            include/goat/goat.hpp)
+        src/goat/application.cpp
+        src/goat/engine.cpp
+        src/goat/window.cpp
+        include/goat/util/enum_bitops.hpp
+        include/goat/util/platform.hpp
+        include/goat/application.hpp
+        include/goat/engine.hpp
+        include/goat/goat.hpp
+        include/goat/window.hpp)
 
-find_package(Git QUIET)
-if(GIT_FOUND AND EXISTS "${PROJECT_SOURCE_DIR}/.git")
-    # Update submodules as needed
-    option(GIT_SUBMODULE "Check submodules during build" ON)
-    if(GIT_SUBMODULE)
-        message(STATUS "Submodule update")
-        execute_process(COMMAND ${GIT_EXECUTABLE} submodule update --init --recursive
-                        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-                        RESULT_VARIABLE GIT_SUBMOD_RESULT)
-        if(NOT GIT_SUBMOD_RESULT EQUAL "0")
-            message(FATAL_ERROR "git submodule update --init --recursive failed with ${GIT_SUBMOD_RESULT}, please checkout submodules")
-        endif()
-    endif()
-endif()
-
-if(NOT EXISTS "${PROJECT_SOURCE_DIR}/extern/fmt/CMakeLists.txt")
-    message(FATAL_ERROR "The submodules were not downloaded! GIT_SUBMODULE was turned off or failed. Please update submodules and try again.")
-endif()
-
+set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
 add_subdirectory(extern/fmt)
 
+set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
 set(OPTION_BUILD_TESTS OFF CACHE BOOL "" FORCE)
 set(OPTION_BUILD_TOOLS OFF CACHE BOOL "" FORCE)
 set(OPTION_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
@@ -52,10 +41,10 @@ target_include_directories(goatlib PUBLIC include)
 target_compile_features(goatlib PUBLIC cxx_std_20)
 
 target_link_libraries(goatlib PUBLIC
-                      fmt::fmt
-                      glbinding::glbinding
-                      glfw
-                      glm::glm
-                      spdlog::spdlog)
+        fmt::fmt
+        glbinding::glbinding
+        glfw
+        glm::glm
+        spdlog::spdlog)
 
 add_subdirectory(example)
